objects/Account.object
<CustomObject>
   <fields>
      <fullName>Active__c</fullName>
      <description>test description</description>
      <label>Active</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>CustomerPriority__c</fullName>
      <label>Customer Priority</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>High</fullName>
            </value>
            <value>
               <fullName>Low</fullName>
            </value>
            <value>
               <fullName>Medium</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>NumberofLocations__c</fullName>
      <label>Number of Locations</label>
      <precision>3</precision>
      <scale>0</scale>
      <type>Number</type>
   </fields>
   <fields>
      <fullName>SLAExpirationDate__c</fullName>
      <label>SLA Expiration Date</label>
      <type>Date</type>
   </fields>
   <fields>
      <fullName>SLASerialNumber__c</fullName>
      <label>SLA Serial Number</label>
      <length>10</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>SLA__c</fullName>
      <label>SLA</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>Gold</fullName>
            </value>
            <value>
               <fullName>Silver</fullName>
            </value>
            <value>
               <fullName>Platinum</fullName>
            </value>
            <value>
               <fullName>Bronze</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>UpsellOpportunity__c</fullName>
      <label>Upsell Opportunity</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>Maybe</fullName>
            </value>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>custom_pick_list_field__c</fullName>
      <label>custom pick list field</label>
      <type>Picklist</type>
      <valueSet>
         <controllingField>CustomerPriority__c</controllingField>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>val77</fullName>
            </value>
            <value>
               <fullName>val2</fullName>
            </value>
            <value>
               <fullName>val3</fullName>
            </value>
            <value>
               <fullName>val4</fullName>
            </value>
            <value>
               <fullName>val1</fullName>
               <isActive>false</isActive>
               <label>val1</label>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <listViews>
      <fullName>AllAccounts</fullName>
      <filterScope>Everything</filterScope>
      <label>All Accounts</label>
   </listViews>
   <listViews>
      <fullName>MyAccounts</fullName>
      <filterScope>Mine</filterScope>
      <label>My Accounts</label>
   </listViews>
   <listViews>
      <fullName>NewLastWeek</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>ACCOUNT.CREATED_DATE</field>
         <operation>equals</operation>
         <value>LAST_WEEK</value>
      </filters>
      <label>New Last Week</label>
   </listViews>
   <listViews>
      <fullName>NewThisWeek</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>ACCOUNT.CREATED_DATE</field>
         <operation>equals</operation>
         <value>THIS_WEEK</value>
      </filters>
      <label>New This Week</label>
   </listViews>
   <listViews>
      <fullName>PlatinumandGoldSLACustomers</fullName>
      <columns>ACCOUNT.NAME</columns>
      <columns>ACCOUNT.SITE</columns>
      <columns>ACCOUNT.ADDRESS1_STATE</columns>
      <columns>ACCOUNT.PHONE1</columns>
      <columns>CORE.USERS.ALIAS</columns>
      <filterScope>Everything</filterScope>
      <label>Platinum and Gold SLA Customers</label>
   </listViews>
   <recordTypes>
      <fullName>Customer</fullName>
      <active>true</active>
      <label>Customer</label>
   </recordTypes>
   <recordTypes>
      <fullName>Digital_Ink_Solutions</fullName>
      <active>true</active>
      <label>Digital Ink Solutions</label>
   </recordTypes>
   <recordTypes>
      <fullName>Global_Ecosystem</fullName>
      <active>true</active>
      <label>Global Ecosystem</label>
   </recordTypes>
   <sharingModel>ReadWrite</sharingModel>
</CustomObject>